crates/main/amethystate/tests/snapshots/error_reports__decode_wrong_type_redb.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the value could not be encoded or decoded
├╴as: u16
├╴decoding 13 bytes of messagepack
│
├─▶ Erased codec error: wrong msgpack marker FixStr(12)
│
╰─▶ wrong msgpack marker FixStr(12)
