crates/main/amethystate/tests/snapshots/error_reports__empty_level.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: err.to_string()
---
the write was given no path to land at: level 1 of the path has no name
