crates/main/amethystate/tests/snapshots/error_reports__get_wrong_type_db.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the store could not read
├╴file: <store>
├╴key: cfg.name
│
├─▶ the value could not be encoded or decoded
│   ├╴path: cfg.name
│   ╰╴decoding 14 bytes of json
│
├─▶ Erased codec error: invalid type: string "not a number", expected u32 at line 1 column 14
│   
│   	a number"
│   	........^
│
╰─▶ invalid type: string "not a number", expected u32 at line 1 column 14
    
    	a number"
    	........^
