crates/main/amethystate/tests/snapshots/error_reports__get_wrong_type_redb.snap
---
source: crates/main/amethystate/tests/error_reports.rs
expression: shape(&err)
---
the store could not read
├╴store: <store>
├╴key: cfg.name (unflushed)
│
├─▶ the value could not be encoded or decoded
│   ├╴path: cfg.name
│   ╰╴decoding 13 bytes of messagepack
│
├─▶ Erased codec error: wrong msgpack marker FixStr(12)
│
╰─▶ wrong msgpack marker FixStr(12)
